--- a/index.html
+++ b/index.html
@@ -5,32 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://fonts.google.com/specimen/Raleway?query=ral#:~:text=%3Clink%20rel%3D%22preconnect%22%20href%3D%22https%3A//fonts.googleapis.com%22%3E%0A%3Clink%20rel%3D%22preconnect%22%20href%3D%22https%3A//fonts.gstatic.com%22%20crossorigin%3E%0A%3Clink%20href%3D%22https%3A//fonts.googleapis.com/css2%3Ffamily%3DRaleway%3Awght%40700%26family%3DRoboto%3Aital%2Cwght%400%2C400%3B0%2C500%3B0%2C900%3B1%2C400%26display%3Dswap%22%20rel%3D%22stylesheet%22%3E">
     <title>WebStudio</title>
 </head>
 <body>
-    <header>
-        <a href="index.html">
+    <header class="header">
+        <a href="index.html" class="header-logo">
             <span>Web</span>
             <span>Studio</span>
         </a> 
-        <nav>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+        <nav class="header-navigation">
+            <ul class="header-list">
+                <li class="header-item"><a href="" class="header-link">Студия</a></li>
+                <li class="header-item"><a href="" class="header-link" >Портфолио</a></li>
+                <li class="header-item"><a href="" class="header-link" >Контакты</a></li>
             <ul>
         </nav> 
         <ul>
-            <li><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="header-mail"><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="header-tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </header>
         <main>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+            <section class="hero" >
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button" class="hero-btn">Заказать услугу</button>
             </section>
-            <section>
+            <section class="content">
                 <h2>Наши преимущества</h2>
                 <ul>
                     <li>
@@ -51,17 +52,17 @@
                     </li>
                 </ul>
             </section>
-            <section>
-                <h2>Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./img/img1.jpg" width="370" alt="компьютер и планшет"></li>
-                    <li><img src="./img/img2.jpg" width="370" alt="компьютер и мобильний телефон"></li>
-                    <li><img src="./img/img3.jpg" width="370" alt="палитра цветов на экране планшета"></li>
+            <section class="work">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="work-list">
+                    <li class="work-icon"><img src="./img/img1.jpg" width="370" alt="компьютер и планшет"></li>
+                    <li class="work-icon"><img src="./img/img2.jpg" width="370" alt="компьютер и мобильний телефон"></li>
+                    <li class="work-icon"><img src="./img/img3.jpg" width="370" alt="палитра цветов на экране планшета"></li>
                 </ul>
             </section>
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
+            <section class="team">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team-list">
                     <li>
                         <img src="./img/photo1.jpg" alt="фото игоря" width="270">
                         <h3>Игорь Демьяненко</h3>
