--- a/index.html
+++ b/index.html
@@ -10,50 +10,50 @@
 </head>
 <body>
     <header class="header">
-        <a href="index.html" class="header-logo">
-            <span>Web</span>
+        <a href="index.html" lang="en" class="header-logo">
+            <span class="header-logo-color">Web</span>
             <span>Studio</span>
         </a> 
         <nav class="header-navigation">
             <ul class="header-list">
-                <li class="header-item"><a href="" class="header-link">Студия</a></li>
+                <li class="header-item"><a href="" class="header-link-active">Студия</a></li>
                 <li class="header-item"><a href="" class="header-link" >Портфолио</a></li>
                 <li class="header-item"><a href="" class="header-link" >Контакты</a></li>
             <ul>
         </nav> 
-        <ul>
-            <li class="header-mail"><a href="mail:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-tel"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="contacts-list">
+            <li class="contact-item"><a class="header-mail" href="mail:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-item"><a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-        </header>
+    </header>
         <main>
             <section class="hero" >
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
             </section>
             <section class="content">
-                <h2>Наши преимущества</h2>
-                <ul>
-                    <li>
-                        <h3>Внимание к деталям</h3>
-                        <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h2 class="section-content-title">Наши преимущества</h2>
+                <ul class="content-list">
+                    <li class="content-item">
+                        <h3 class="content-item-title">Внимание к деталям</h3>
+                        <p class="content-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
-                        <h3>Пунктуальность</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <li class="content-item">
+                        <h3 class="content-item-title">Пунктуальность</h3>
+                        <p class="content-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
-                        <h3>Планирование</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <li class="content-item">
+                        <h3 class="content-item-title">Планирование</h3>
+                        <p class="content-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <li class="content-item">
+                        <h3 class="content-item-title">Современные технологии</h3>
+                        <p class="content-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </section>
             <section class="work">
-                <h2 class="section-title">Чем мы занимаемся</h2>
+                <h2 class="section-work-title">Чем мы занимаемся</h2>
                 <ul class="work-list">
                     <li class="work-icon"><img src="./img/img1.jpg" width="370" alt="компьютер и планшет"></li>
                     <li class="work-icon"><img src="./img/img2.jpg" width="370" alt="компьютер и мобильний телефон"></li>
@@ -61,38 +61,38 @@
                 </ul>
             </section>
             <section class="team">
-                <h2 class="section-title">Наша команда</h2>
+                <h2 class="section-team-title">Наша команда</h2>
                 <ul class="team-list">
-                    <li>
+                    <li class="team-item">
                         <img src="./img/photo1.jpg" alt="фото игоря" width="270">
-                        <h3>Игорь Демьяненко</h3>
-                        <p>Product Designer</p>
+                        <h3 class="team-title">Игорь Демьяненко</h3>
+                        <p class="team-text">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./img/photo2.jpg" alt="фото ольги" width="270">
-                        <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
+                        <h3 class="team-title">Ольга Репина</h3>
+                        <p class="team-text">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./img/photo3.jpg" alt="фото николая" width="270">
-                        <h3>Николай Тарасов</h3>
-                        <p>Marketing</p>
+                        <h3 class="team-title">Николай Тарасов</h3>
+                        <p class="team-text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./img/photo4.jpg" alt="фото михаила" width="270">
-                        <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
+                        <h3 class="team-title">Михаил Ермаков</h3>
+                        <p class="team-text">UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
-        <footer>
-            <a href="index.html"> <span>Web</span> <span>Studio</span></a>
-            <address>
-            <ul>
-                <li> <p>г. Киев, пр-т Леси Украинки, 26</p></li>
-                <li><a href="mail:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <footer class="footer">
+            <a href="index.html" class="footer-logo"> <span class="footer-logo-color">Web</span> <span>Studio</span></a>
+            <address class="footer-addres">
+            <ul class="footer-list">
+                <li class="footer-item"> <p class="footer-text-addres">г. Киев, пр-т Леси Украинки, 26</p></li>
+                <li class="footer-item"><a class="footer-text" href="mail:info@example.com">info@example.com</a></li>
+                <li class="footer-item"><a class="footer-text" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
             </address>
         </footer>
