--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
             <section class="work">
                 <h2 class="section-work-title">Чем мы занимаемся</h2>
                 <ul class="work-list list">
-                    <li class="work-icon"><img src="./img/img1.jpg" width="370" alt="компьютер и планшет"></li>
-                    <li class="work-icon"><img src="./img/img2.jpg" width="370" alt="компьютер и мобильний телефон"></li>
-                    <li class="work-icon"><img src="./img/img3.jpg" width="370" alt="палитра цветов на экране планшета"></li>
+                    <li class="work-icon"><img src="./images/img1.jpg" width="370" alt="компьютер и планшет"></li>
+                    <li class="work-icon"><img src="./images/img2.jpg" width="370" alt="компьютер и мобильний телефон"></li>
+                    <li class="work-icon"><img src="./images/img3.jpg" width="370" alt="палитра цветов на экране планшета"></li>
                 </ul>
             </section>
             <section class="team">
                 <h2 class="section-team-title">Наша команда</h2>
                 <ul class="team-list list">
                     <li class="team-item">
-                        <img src="./img/photo1.jpg" alt="фото игоря" width="270">
+                        <img src="./images/photo1.jpg" alt="фото игоря" width="270">
                         <h3 class="team-title">Игорь Демьяненко</h3>
                         <p lang="en" class="team-text">Product Designer</p>
                     </li>
                     <li class="team-item">
-                        <img src="./img/photo2.jpg" alt="фото ольги" width="270">
+                        <img src="./images/photo2.jpg" alt="фото ольги" width="270">
                         <h3 class="team-title">Ольга Репина</h3>
                         <p lang="en" class="team-text">Frontend Developer</p>
                     </li>
                     <li class="team-item">
-                        <img src="./img/photo3.jpg" alt="фото николая" width="270">
+                        <img src="./images/photo3.jpg" alt="фото николая" width="270">
                         <h3 class="team-title">Николай Тарасов</h3>
                         <p lang="en" class="team-text">Marketing</p>
                     </li>
                     <li class="team-item">
-                        <img src="./img/photo4.jpg" alt="фото михаила" width="270">
+                        <img src="./images/photo4.jpg" alt="фото михаила" width="270">
                         <h3 class="team-title">Михаил Ермаков</h3>
                         <p lang="en" class="team-text">UI Designer</p>
                     </li>
