--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,15 @@
          </ul>  
     <main>
          <section>
-        <h1>Портфолио</h1>
-        <ul>
+        <h1 class="visuali-hidden">Портфолио</h1>
+        <ul class="btn-list">
             <li><button type="button" class="button-secondary">Все</button></li>
             <li><button type="button" class="button-secondary">Веб-сайты</button></li>
             <li><button type="button" class="button-secondary">Приложения</button></li>
             <li><button type="button" class="button-secondary">Дизайн</button></li>
             <li><button type="button" class="button-secondary">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="icon-list">
             <li> <a href="" class="link">
                 <img src="./images/img4.jpg" width="370" alt="Ноутбук">
                 <h2 class="portfolio-sample">Технокряк</h2>
