--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
             <li> <a href="" class="link">
                 <img src="./images/img4.jpg" width="370" alt="Ноутбук">
                 <h2 class="portfolio-sample">Технокряк</h2>
-                <p>Веб-сайт</p>
+                <p class="portfolio-info">Веб-сайт</p>
                  </a>
             </li>
             <li> <a href="" class="link">
